--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "websockets",
-  "version": "0.0.1",
-  "description": "client websocket for spiral framework",
+  "name": "@sf/websockets",
+  "version": "0.0.2",
+  "description": "Websocket client for spiral framework",
+  "main": "build/socket.js",
+  "types": "types/lib",
   "keywords": [
     "websocket",
     "client",
     "js"
   ],
   "scripts": {
+    "clean": "rimraf ./build && rimraf ./types",
+    "prebuild": "yarn clean",
     "type-check": "tsc --noEmit",
-    "type-check:watch": "npm run type-check -- --watch",
+    "type-check:watch": "yarn type-check -- --watch",
     "watch": "webpack --watch --colors",
     "build:js": "webpack",
-    "build:types": "tsc --emitDeclarationOnly",
-    "build": "npm run build:js && npm run build:types",
-    "start": "npm run watch && npm run type-check:watch",
-    "lint": "./node_modules/.bin/eslint ./**/*.ts --fix",
+    "build:types": "tsc --emitDeclarationOnly --outDir ./types",
+    "build": "yarn build:js && yarn build:types",
+    "lint": "eslint ./**/*.ts --fix",
     "test": "jest ./test/*.test.js"
   },
   "author": "spiral",
@@ -40,6 +43,7 @@
     "jest": "^25.1.0",
     "jest-websocket-mock": "^2.0.1",
     "mock-socket": "^9.0.3",
+    "rimraf": "^3.0.2",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.4",
     "webpack": "^4.41.0",
