--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.2",
   "description": "Websocket client for spiral framework",
   "main": "build/socket.js",
-  "types": "types/lib",
+  "types": "build/index.d.ts",
   "keywords": [
     "websocket",
     "client",
@@ -16,12 +16,11 @@
     "type-check:watch": "yarn type-check -- --watch",
     "watch": "webpack --watch --colors",
     "build:js": "webpack",
-    "build:types": "tsc --emitDeclarationOnly --outDir ./types",
-    "build": "yarn build:js && yarn build:types",
+    "build": "cross-env NODE_ENV=production yarn build:js",
     "lint": "eslint ./**/*.ts --fix",
-    "test": "jest ./test/*.test.js"
+    "test": "jest lib/test/*.test.js"
   },
-  "author": "spiral",
+  "author": "SpiralScout",
   "license": "MIT",
   "dependencies": {},
   "homepage": "https://github.com/spiral/websockets",
@@ -33,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
     "babel-jest": "^25.1.0",
+    "cross-env": "^7.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-airbnb-typescript": "^6.3.1",
