--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:js": "webpack",
     "build": "cross-env NODE_ENV=production yarn build:js",
     "lint": "eslint ./**/*.ts --fix",
-    "test": "jest lib/test/*.test.js"
+    "test": "jest"
   },
   "author": "SpiralScout",
   "license": "MIT",
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@babel/types": "^7.8.3",
+    "@types/jest": "^25.1.2",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
     "babel-jest": "^25.1.0",
@@ -44,6 +45,7 @@
     "jest-websocket-mock": "^2.0.1",
     "mock-socket": "^9.0.3",
     "rimraf": "^3.0.2",
+    "ts-jest": "^25.2.0",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.4",
     "webpack": "^4.41.0",
