--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sf/websockets",
+  "name": "@spiralscout/websockets",
   "version": "0.0.2",
   "description": "Websocket client for spiral framework",
   "main": "build/socket.js",
@@ -26,9 +26,20 @@
       "pre-push": "yarn lint"
     }
   },
+  "files": [
+    "lib",
+    "build"
+  ],
   "author": "SpiralScout",
   "license": "MIT",
   "dependencies": {},
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/spiral/websockets"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "homepage": "https://github.com/spiral/websockets",
   "devDependencies": {
     "@babel/core": "^7.8.3",
