--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@babel/preset-typescript": "^7.8.3",
     "@babel/types": "^7.8.3",
     "@types/jest": "^25.1.2",
+    "@types/node": "^16.10.3",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
     "babel-jest": "^25.1.0",
