--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Websocket client for spiral framework",
   "main": "build/socket.js",
   "types": "build/index.d.ts",
+  "engines" : { "node" : ">=16.13.0" },
   "keywords": [
     "websocket",
     "client",
@@ -42,32 +43,33 @@
   },
   "homepage": "https://github.com/spiral/websockets",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
-    "@babel/types": "^7.8.3",
-    "@types/jest": "^25.1.2",
-    "@typescript-eslint/eslint-plugin": "^2.17.0",
-    "@typescript-eslint/parser": "^2.17.0",
-    "babel-jest": "^25.1.0",
-    "cross-env": "^7.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-airbnb-typescript": "^6.3.1",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@babel/types": "^7.16.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "babel-jest": "^27.3.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-output-todo-comments": "^0.0.7",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "husky": "^4.2.2",
-    "jest": "^25.1.0",
-    "jest-websocket-mock": "^2.0.1",
-    "mock-socket": "^9.0.3",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
+    "jest-websocket-mock": "^2.2.1",
+    "mock-socket": "^9.0.7",
     "rimraf": "^3.0.2",
-    "ts-jest": "^25.2.0",
-    "ts-loader": "^6.2.0",
-    "typescript": "^3.6.4",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
+    "ts-jest": "^27.0.7",
+    "ts-loader": "^7.0.5",
+    "typescript": "^4.4.4",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   }
 }
